# degiroasync

./: .buildinfo  .gitignore  LICENSE  README.md  api.html  core.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.py  webapi.html
.github/workflows/: lint-and-tests.yml
_sources/: api.rst.txt  index.rst.txt  quickstart.rst.txt  webapi.rst.txt
degiroasync/: __init__.py  api.py  constants.py  core.py  helpers.py  unittest.cfg  webapi.py
degiroasync/api/: __init__.py  api.py  orders.py  product.py  session.py
degiroasync/core/: __init__.py  constants.py  core.py  exceptions.py  helpers.py
degiroasync/webapi/: __init__.py  login.py  orders.py  product.py  webapi.py
docs/source/: api.rst  conf.py  core.rst  index.rst  quickstart.rst  symbols.txt
docs/source/_static/css/: custom.css
hooks/: pre-commit
tests/: integration_login.py  test_core.py  test_degiroapi.py  test_degirowebapi.py
