[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "degiroasync"
version = "0.23.0"
authors = [{ name = "ohmajesticlama", email = "ohmajesticlama@gmail.com" }]
description = "A Python asynchronous library for Degiro trading service."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "httpx >= 0.21.3, < 1.0",
    "jsonloader >= 0.8.1, < 1.0",
    "asyncstdlib >= 3.10.3, < 4.0",
    "more_itertools >= 8.12.0, < 9",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]

[project.urls]
"Documentation" = "https://ohmajesticlama.github.io/degiroasync/index.html"
"Homepage" = "https://github.com/OhMajesticLama/degiroasync"

[project.optional-dependencies]
dev = [
    # Tests
    "pytest >= 7.0.1",
    "coverage >= 6.3",
    "pandas >= 3.0.1",
    # Code quality
    "flake8 >= 4.0.1",
    "mypy >= 0.931",
    # For shipping
    "build >= 0.7.0",
    "twine >= 3.8.0",
    # Documentation
    "sphinx >= 4.4.0",
    "sphinx_rtd_theme >= 1.0.0",
    "myst-parser >= 0.17.0",
    # Other dev tools
    "ipython",
    "ipdb",
]

[tool.setuptools]
packages = ["degiroasync"]
